--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -5,6 +5,14 @@
         </div>
     </div>
 </div>
+
+<!--div class="row h-header yellow">
+  <div class="col-xs-12 text-center">
+    {{'LEADERBOARD.MY_POINTS' | translate}}
+  </div>
+</div-->
+
+
 <div class="row" ng-show="hasScore">
     <div id="tournamentScroll" class="wrapper wrapper-row" ng-style="getHeight()">
         <div class="scroller" ng-style="getWidth()">
