--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -3,7 +3,7 @@
         <ul>
             <li ng-style="getWidth()" ng-repeat="page in pages track by page.id" on-last-repeat>
                 <div class="container">
-                    <div class="row header">
+                    <div class="row h-header green">
                         <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
                             <button ng-bind="pages[$index-1].name" ></button>
                         </div>
@@ -23,7 +23,7 @@
                                         <table class="table" ng-repeat="league in page.matches.leagues">
                                             <thead>
                                             <tr>
-                                                <th colspan="3">
+                                                <th colspan="3" class="h-header yellow">
                                                     <span ng-bind="league.name"></span>
                                                 </th>
                                             </tr>
@@ -57,7 +57,7 @@
                     </div>
 
                     <div class="row" ng-show="page.matches.empty">
-                        <div class="col-xs-12 news">
+                        <div class="col-xs-12">
                             <div class="no-content-panel" style="margin-top: 120px !important;">
                                 <i class="mdi-action-info-outline"></i>
                                 <div class="no-content-panel-title" translate>EMPTY_STATES.MATCH</div>
