--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -1,9 +1,10 @@
-<div class="row section-header">
+<div class="row h-header green">
     <div class="col-xs-12" >
-        <h4 class="caption text-center">{{date}}</h4>
+        <span >{{date}}</span>
     </div>
 </div>
-<div id="wrapper">
+
+<div id="wrapper" class="page wrapper">
     <div class="scroller">
         <div class="container" >
             <div class="row" ng-show="hasGamesForToday">
@@ -11,7 +12,7 @@
                     <table class="table" ng-repeat="league in item.leagues">
                         <thead>
                             <tr>
-                                <th colspan="3">
+                                <th colspan="3" class="h-header yellow">
                                     <span ng-bind="league.name"></span>
                                 </th>
                             </tr>
@@ -54,21 +55,31 @@
     </div>
 </div>
 
-<div id="wrapper2" class="page" style="left: 100%;" >
+<div id="wrapper2" class="page wrapper" style="left: 100%;" >
     <div class="scroller">
         <div class="container" >
-            <div class="row" style="height: 150px; margin-bottom: 1px !important;" >
+            <!--div class="row" style="height: 150px; margin-bottom: 1px !important;" >
                 <div class="col-xs-12">
                     <span>&nbsp;</span>
                 </div>
+            </div-->
+
+            <div class="row h-header red">
+              <div class="col-xs-12">
+                  <span ng-bind="item.league.name"></span>
+                  <span class="section-refresh" ng-class="refreshIconClass" ng-click="refreshEvents()">
+                      <i class="icon mdi-navigation-refresh"></i>
+                  </span>
+              </div>
             </div>
+
 
             <div class="row" >
                 <div class="col-xs-12" >
                     <table class="table" ng-repeat="action in item.mtm.actions">
                         <thead>
                             <tr>
-                                <th colspan="2"  class="status {{action.period.short_name}}">
+                                <th colspan="2"  class="status {{action.period.short_name}} h-header yellow">
                                     <span ng-bind="action.period.name"></span>
                                 </th>
                             </tr>
@@ -92,13 +103,22 @@
         </div>
     </div>
 
-    <div class="row row-header row-header-live">
+    <!--div class="row row-header row-header-live">
         <div class="col-xs-12 text-center text-center-vertical">
             <span ng-bind="item.league.name" style="font-size: 1.2em; font-weight: bold;"></span>
             <span class="section-refresh" ng-class="refreshIconClass" ng-click="refreshEvents()">
                 <i class="icon mdi-navigation-refresh"></i>
             </span>
         </div>
+    </div-->
+
+    <div class="row row-header h-header red">
+      <div class="col-xs-12">
+        <span ng-bind="item.league.name"></span>
+        <span ng-class="refreshIconClass" ng-click="refreshEvents()" style="position: absolute; right: 10px;">
+            <i class="icon mdi-navigation-refresh" style=" font-size:2em;vertical-align: middle;"></i>
+        </span>
+      </div>
     </div>
 
     <div class="row-scoreboard">
