--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -1,49 +1,44 @@
-<div class="row row-news-header">
-    <div class="col-xs-12 text-center text-center-vertical">
-        <div class="news-header">
-            <h4 class="title" translate>SECTIONS.NOTISTATS.NEWS</h4>
-        </div>
-    </div>
-</div>
-
-<div id="wrapper" class="wrapper wrapper-row">
+<div id="wrapper" class="page">
     <div class="scroller">
         <div class="container">
-            <div class="row" ng-show="hasNews">
-                <div class="col-xs-12 news"
+
+            <div class="row h-list news" ng-show="hasNews">
+                <div class="col-xs-12"
                      ng-repeat="item in news track by item.idNews"
                      ng-click="showContentNews(item)">
-                    <h5 class="title">{{item.title}}</h5>
+                    <h6 class="headline" style="font-weight:bold;" >{{item.title}}</h6>
                     <i class="icon mdi-device-access-time"></i>
-                    <span class="moment">{{fromNow(item.publicationDate)}}</span>
+                    <span class="moment" style="color: #2c9cd3;">{{fromNow(item.publicationDate)}}</span>
                 </div>
             </div>
+
             <div class="row" ng-hide="hasNews">
-                <div class="col-xs-12 news">
-                    <div class="no-content-panel" style="margin-top: 120px !important;">
+                <div class="col-xs-12">
+                    <div class="no-content-panel">
                         <i class="mdi-action-info-outline"></i>
                         <div class="no-content-panel-title" translate>EMPTY_STATES.NEWS</div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
 
-<div id="wrapper2" class="wrapper wrapper-row page" style="left: 100%;" >
+<div id="wrapper2" class="page" style="left: 100%;" >
     <div class="scroller">
         <div class="container">
-            <div class="row row-news-detail-header">
+            <div class="row" style="margin-top:10px;">
                 <div class="col-xs-12 text-right" ng-click="share(contentNews)">
-                    <i class="mdi-social-share" style="font-size: 1.8em; line-height: 1.8em;"></i>
+                  <i class="mdi-social-share" style="font-size: 2em;"></i>
                 </div>
-            </div>
-            <div class="row" style="margin-top: 35px !important;" >
-                <div class="col-xs-12 news"  >
-                    <h3 class="title">{{contentNews.title}}</h3>
-                    <i class="icon mdi-device-access-time"></i>
-                    <span class="moment">{{fromNow(contentNews.publicationDate)}}</span>
-                    <p class="body" style="margin: 0 18px 0 0;" ng-bind-html="contentNews.body"> </p>
+                <div class="col-xs-12">
+                  <h3 class="headline">{{contentNews.title}}</h3>
+                  <i class="icon mdi-device-access-time"></i>
+                  <span class="moment">{{fromNow(contentNews.publicationDate)}}</span>
+                </div>
+                <div class="col-xs-12">
+                  <p class="body" ng-bind-html="contentNews.body"></p>
                 </div>
             </div>
         </div>
