--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -22,32 +22,17 @@
                     </div>
                   </div>
 
-                    <!--div class="row row-header row-header-competition">
-
-                        <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
-                            <h6 ng-bind="leagues[$index-1].name"></h6>
-                        </div>
-
-                        <div class="col-xs-4">
-                            <h5 ng-bind="league.name" class="caption"></h5>
-                        </div>
-
-                        <div class="col-xs-4 tabs text-right" ng-click="nextPage()">
-                            <h6 ng-bind="leagues[$index+1].name"></h6>
-                        </div>
-                    </div-->
-
                     <div class="row" ng-hide="league.empty">
-                        <div id="{{vWrapper.getName($index)}}" class="wrapper wrapper-full">
+                        <div id="{{vWrapper.getName($index)}}" class="wrapper">
                             <div class="scroller">
                                 <div class="container">
                                     <div class="col-xs-12" >
                                         <table  ng-show="league.scorers" class="table">
                                             <thead>
                                             <tr>
-                                                <th translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
-                                                <th translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
-                                                <th translate>SCORERS.GOALS_LABEL</th>
+                                                <th class="h-header yellow" translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
+                                                <th class="h-header yellow" translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
+                                                <th class="h-header yellow" translate>SCORERS.GOALS_LABEL</th>
                                             </tr>
                                             </thead>
                                             <tbody>
